--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "typescript": "^3.9.5"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.0",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
-    "sass": "^1.26.8"
+    "jest": "^26.0.1",
+    "sass": "^1.26.8",
+    "ts-jest": "^26.1.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "dev": "parcel src/index.html",
+    "dev:nohmr": "parcel --no-hmr src/index.html",
+    "build": "parcel build src/index.html"
   }
 }
